--- a/source/index.haml
+++ b/source/index.haml
@@ -1,1 +1,7 @@
 = partial "pages/index/teaser"
+
+= partial "pages/work/dribbble"
+
+= partial "pages/about/short"
+
+= partial "pages/contact/email"
