--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -14,9 +14,13 @@
 @import "global/general";
 @import "global/layout";
 @import "global/icons";
+@import "global/buttons";
 
 // Component styles
 @import "components/header";
 @import "components/navigation";
 @import "components/teaser";
 @import "components/footer";
+@import "components/dribbble";
+@import "components/about";
+@import "components/email";
