--- a/source/layouts/_navigation.haml
+++ b/source/layouts/_navigation.haml
@@ -1,10 +1,8 @@
-%nav{role: "navigation"}
+%nav{role: "navigation"} 
   %ul
     %li
-      = link_to "About", "about.html"
+      = link_to "Work", "#work"
     %li
-      = link_to "Work", "work.html"
+      = link_to "About", "#about"
     %li
-      = link_to "Dribbble", "//dribbble.com/mariusz"
-    %li
-      = link_to "Contact", "contact.html"
+      = link_to "Contact", "#contact"
