--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -2,6 +2,7 @@
 
 %html
   %head
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
     %meta{charset: "utf-8"}
     %meta{name: "description", content: "Freelance Web & Interactive Designer based in Kraków, Poland and Berlin, Germany."}
     %meta{name: "keywords", content: "freelance, web design, ui design, ux design, designer, interactive design, mobile design, iOS design, user interface, user experience, krakow, berlin"}
@@ -10,14 +11,12 @@
 
     = stylesheet_link_tag "vendor/normalize", "site"
 
+    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+    = javascript_include_tag "vendor/jquery.jribbble.min.js"
+    = javascript_include_tag "site"
+
     %title Mariusz Cieśla - Freelance Interactive Designer
   %body
-    %header{role: "banner"}
-      %h1 
-        = link_to "Mariusz Cieśla", "/"
-
-      = partial "layouts/navigation"
-
     = yield
 
     = partial "layouts/footer"
