--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,6 +1,5 @@
-$brand-red: #C74E43;
-$brand-blue: #0193CF;
+$brand-blue: #F89820;
 $off-white: #f2f2f2;
+$button-color: #F89820;
 
-
-$text-color: #333;
+$text-color: #364054;
