--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -1,12 +1,13 @@
-$base-font-size: 16px;
-$ms-ratio: golden();
+$base-font-size: 1.5em;
+$ms-ratio: 1.25;
 $line-height: 1.5; 
 $header-line-height: 1.25;
 
 body {
-  font-family: "europa", Helvetica, Arial, sans-serif;
+  font-family: "europa", sans-serif;
   font-size: 100%;
-  line-height: 1.5;
+  font-weight: 500;
+  line-height: $line-height;
 }
 
 h1, h2, h3 {
@@ -25,12 +26,8 @@ h3 {
   font-size: $base-font-size;
 }
 
-.huge {
-  font-size: ms(4, $base-font-size, $ms-ratio);
-}
-
 .amp {
-  font-family: "garvis-pro", Georgia, "Times New Roman", Times, serif;
+  font-family: "garvis-pro", serif;
   font-style: italic;
   font-weight: normal;
 }
