--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -2,15 +2,15 @@
 .about
   .content
     .description
-      %p
-        I have been working as a freelance interactive designer as well as
-        various kinds of developer since 2004, since 2007 as an in-house
-        designer for a couple of different studios and start-ups.
-    
-      %p
-        I have been doing branding, interaction and user interface design,
-        and I have been working with PHP, Ruby on Rails, Node.js and 
-        Python/Django. Deep understanding of development process lets
-        me work side by side with developers to build the product that
-        your users will love.
 
+      %p
+        Hello, my name is Mariusz and I'm a web &amp; mobile interactive designer as well
+        as front-end web developer. I have been around for a while and I worked with
+        variety of clients - from startups to corporations and governments.
+
+      %p
+        I have experience with logo design, interaction and user interface design and
+        front-end web development and I have been working with PHP, Rails, Django, 
+        Node.js, iOS and Android. Since I understand the development process, I can 
+        work side by side with your developers to deliver products that your customers 
+        will love.
