Description to :markdown

--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -3,14 +3,13 @@
   .content
     .description
 
-      %p
-        Hello, my name is Mariusz and I'm a web &amp; mobile interactive designer as well
-        as front-end web developer. I have been around for a while and I worked with
+      :markdown
+        Hello, my name is Mariusz and I'm a web & mobile interactive designer and 
+        front-end web developer. I have been around for a while and I worked with
         variety of clients - from startups to corporations and governments.
 
-      %p
-        I have experience with logo design, interaction and user interface design and
-        front-end web development and I have been working with PHP, Rails, Django, 
-        Node.js, iOS and Android. Since I understand the development process, I can 
-        work side by side with your developers to deliver products that your customers 
-        will love.
+        I have working experience with logo design, interaction and user interface 
+        design and front-end web development and I have been working with PHP, Rails, 
+        Django, Node.js, iOS and Android apps. I understand the development process, 
+        so I can work side by side with your developers to deliver products that your 
+        customers will love.
