--- a/source/stylesheets/components/_email.scss
+++ b/source/stylesheets/components/_email.scss
@@ -6,7 +6,8 @@
   }
 
   p {
-    @include span-columns(12);
+    @include span-columns(10);
+    @include pad(1,1);
 
     text-align: center;
     margin-bottom: 2em;
