Padding on the footer

--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -11,6 +11,7 @@ $dribbble-pink: #E24D87;
   color: lighten($text-color, 50%);
   text-align: center;
   font-size: 75%;
+  padding-bottom: 50px;
 
   li {
     display: inline;
