Improve letter spacing in the teaser

--- a/source/stylesheets/components/_teaser.scss
+++ b/source/stylesheets/components/_teaser.scss
@@ -30,7 +30,8 @@
   }
 
   .design-and-build {
-    font-size: 1.5em;
+    font-size: 1.75em;
+    letter-spacing: .1em;
     display: block;
     font-weight: bold;
     text-transform: uppercase;
