--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -4,6 +4,8 @@
 $twitter-blue: #00aced;
 $pinterest-red: #CB2027;
 $dribbble-pink: #E24D87;
+$gplus-red: #D64A2E;
+$app-net-gray: #898D90;
 
 [role=footer] {
   @include container;
@@ -23,7 +25,8 @@ $dribbble-pink: #E24D87;
 
     color: lighten($text-color, 50%);
     display: inline-block;
-    padding: 15px 20px;
+    padding: 18px 20px;
+    font-size: 14px;
 
     -webkit-font-smoothing: antialiased;
 
@@ -34,5 +37,7 @@ $dribbble-pink: #E24D87;
 
   .icon-twitter:hover { background: $twitter-blue; }
   .icon-pinterest:hover { background: $pinterest-red; }
-  .icon-dribbble:hover { background: $dribbble-pink; } 
+  .icon-dribbble:hover { background: $dribbble-pink; }
+  .icon-app-net:hover { background: $app-net-gray; }
+  .icon-gplus:hover { background: $gplus-red; } 
 }
