--- a/source/stylesheets/global/_icons.scss
+++ b/source/stylesheets/global/_icons.scss
@@ -7,9 +7,9 @@
   font-style: normal;
   font-size: 16px;
 
-  &.icon-twitter:before { content: "\F309"; }
-  &.icon-pinterest:before { content: "\F312"; }
-  &.icon-dribbble:before { content: "\F31B"; }
-  &.icon-spotify:before { content: "\F327"; }
-  &.icon-instagram:before { content: "\F32D"; }
+  &.icon-twitter:before { content: "\0054"; }
+  &.icon-pinterest:before { content: "\0031"; }
+  &.icon-dribbble:before { content: "\0044"; }
+  &.icon-gplus:before { content: "\002b"; }
+  &.icon-app-net:before { content: "\00e1"; }
 }
