Add stuff, fix stuff.:

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -19,7 +19,7 @@
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     = javascript_include_tag "site"
 
-    %title Mariusz Cieśla - Interactive Design / Front-end Development
+    %title Mariusz Cieśla - Web &amp; Mobile User Interface Designer and Developer
 
   %body
     = yield
