--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -4,12 +4,13 @@
     .description
 
       :markdown
-        Hello, my name is Mariusz and I'm a web & mobile interactive designer and 
-        front-end web developer. I have been around for a while and I worked with
-        variety of clients - from startups to corporations and governments.
+        I'm a self-taught multi-disciplinary designer, firmly believing that design
+        should be available at every stage of product development. That's why I've 
+        been experimenting with all sorts of design and development for the last couple
+        of years.
 
-        I have working experience with logo design, interaction and user interface 
-        design and front-end web development and I have been working with PHP, Rails, 
-        Django, Node.js, iOS and Android apps. I understand the development process, 
-        so I can work side by side with your developers to deliver products that your 
-        customers will love.
+        I have working experience with branding, user experience and user interface
+        design. I am familiar with writting Rails, Python and Node.js applications as 
+        well as designing for iOS and Android devices. That experience lets me work side 
+        by side with your development team making sure that design is available on
+        every step of the process.
