--- a/source/pages/work/_dribbble.haml
+++ b/source/pages/work/_dribbble.haml
@@ -2,7 +2,7 @@
 .dribbble
   %header
     %h2 
-      Recent shots from
+      Recent designs from
       = link_to "Dribbble", "//dribbble.com/mariusz"
 
   %ul#dribbble_shots.shots
