--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -15,6 +15,7 @@
 @import "global/layout";
 @import "global/icons";
 @import "global/buttons";
+@import "global/animations";
 
 // Component styles
 @import "components/header";
