--- a/source/stylesheets/global/_buttons.scss
+++ b/source/stylesheets/global/_buttons.scss
@@ -13,6 +13,7 @@ button {
   font-weight: bold;
   text-decoration: none;
   text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+  word-wrap: nowrap;
 
   -webkit-font-smoothing: antialiased; 
 
