--- a/source/layouts/_navigation.haml
+++ b/source/layouts/_navigation.haml
@@ -5,4 +5,6 @@
     %li
       = link_to "About", "#about"
     %li
+      = link_to "Blog", "http://blog.mariusz.cc", target: "_blank"
+    %li
       = link_to "Contact", "#contact"
