text-rendering, ligatures

--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -8,6 +8,19 @@ body {
   font-size: 100%;
   font-weight: 500;
   line-height: $line-height;
+
+  // Fix fonts
+  -webkit-text-rendering: optimizeLegibility;
+  -moz-text-rendering: optimizeLegibility;
+  -ms-text-rendering: optimizeLegibility;
+  text-rendering: optimizeLegibility;
+
+  // Ligatures
+  -moz-font-feature-settings: "liga=1, dlig=1";
+  -ms-font-feature-settings: "liga", "dlig";
+  -webkit-font-feature-settings: "liga", "dlig";
+  -o-font-feature-settings: "liga", "dlig";
+  font-feature-settings: "liga", "dlig";
 }
 
 h1, h2, h3 {
