--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -2,15 +2,13 @@
 .about
   .content
     .description
-
       :markdown
-        I'm a self-taught multi-disciplinary designer, firmly believing that design
-        should be available at every stage of product development. That's why I've 
-        been experimenting with all sorts of design and development for the last couple
-        of years.
+        I'm a self-taught user interface designer based in Kraków, firmly believing that
+        design is a process, not something that you put on top of a ready-made app. That's
+        why I've been dipping my toes into development world to be able to understand and
+        help your developers deliver product that your clients will love.
 
-        I have working experience with branding, user experience and user interface
-        design. I am familiar with writting Rails, Python and Node.js applications as 
-        well as designing for iOS and Android devices. That experience lets me work side 
-        by side with your development team making sure that design is available on
-        every step of the process.
+        For the last couple of years I have been doing range of tasks - from interaction
+        design to front-end web development - as well as working with Ruby on Rails and 
+        Node.js. I can deliver anything your team needs - from concept sketches to pixel
+        perfect mockups and ready-made HTML prototypes.
