--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -8,7 +8,7 @@
         design
         %span.amp &amp;
         build
-      web and mobile interfaces.
+      web and mobile products
 
     .actions
-      = link_to "Check out my work", "#work", class: "button"
+      = link_to "See my work", "#work", class: "button"
