--- a/source/pages/contact/_email.haml
+++ b/source/pages/contact/_email.haml
@@ -6,4 +6,4 @@
   %p Got an interesting project and would like to work on it with me?
 
   %p
-    = link_to "Get in touch", "mailto:work@mariusz.cc", class: "button"
+    = link_to "Let's chat", "mailto:work@mariusz.cc", class: "button"
