--- a/source/stylesheets/global/_buttons.scss
+++ b/source/stylesheets/global/_buttons.scss
@@ -3,7 +3,7 @@
 .button,
 input[type=submit],
 button {
-  @include box-shadow(0 .25em 0 darken($button-color, 10%));
+  @include box-shadow(0 .2em 0 darken($button-color, 10%));
   @include transition(background-color .5s $easing);
 
   border-radius: .25em;
@@ -12,8 +12,10 @@ button {
   padding: .5em 1em;
   font-weight: bold;
   text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+  text-shadow: 0 1px 0 rgba(0,0,0,.25);
   word-wrap: nowrap;
+  text-transform: uppercase;
+  letter-spacing: .05em;
 
   -webkit-font-smoothing: antialiased; 
 
