--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -12,15 +12,16 @@
     %meta{name: "description", content: "Freelance Web and Mobile Interactive Designer based in Kraków, Poland / Berlin, Germany."}
     %meta{name: "keywords", content: "freelance, web design, ui design, ux design, designer, interactive design, mobile design, iOS design, user interface, user experience, krakow, berlin"}
 
+    %title Mariusz Cieśla - User Interface Designer &amp; Front-end Web Developer
+
     = partial "layouts/typekit"
+    = partial "layouts/mixpanel"
 
     = stylesheet_link_tag "vendor/normalize", "site"
 
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     = javascript_include_tag "site"
-
-    %title Mariusz Cieśla &mdash; User Interface Designer and Developer for Web &amp; Mobile
-
+  
   %body
     = yield
 
