Fix title, fix about.

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -12,7 +12,7 @@
     %meta{name: "description", content: "Freelance Web and Mobile Interactive Designer based in Kraków, Poland / Berlin, Germany."}
     %meta{name: "keywords", content: "freelance, web design, ui design, ux design, designer, interactive design, mobile design, iOS design, user interface, user experience, krakow, berlin"}
 
-    %title Mariusz Cieśla - User Interface Designer &amp; Front-end Web Developer
+    %title User Interface Designer &amp; Front-end Web Developer - Mariusz Cieśla
 
     = partial "layouts/typekit"
     = partial "layouts/mixpanel"
