--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -29,6 +29,7 @@
 
   p {
     font-size: 1.25em;
+    font-weight: 300;
 
     @media only screen and (min-width: 600px) {
       font-size: 1.5em;
