Add link to the source code to the footer.

--- a/source/layouts/_footer.haml
+++ b/source/layouts/_footer.haml
@@ -18,4 +18,5 @@
           %i.icon.icon-gplus
 
   %p
-    &copy; 2013 Mariusz Ciesla
+    &copy; 2013 Mariusz Ciesla.
+    = link_to "See the source.", "https://github.com/mariusz/mariusz.cc"
