--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,5 +1,6 @@
 $brand-blue: #F89820;
 $off-white: #f2f2f2;
-$button-color: #E6472E;
+$button-color: #D86852;
+$teaser-bg: $button-color;
 
 $text-color: #364054;
