Replace email with Google Docs form for now

--- a/source/stylesheets/global/_general.scss
+++ b/source/stylesheets/global/_general.scss
@@ -1,5 +1,11 @@
 @import "compass/css3/transition";
 
+small {
+  color: #ddd;
+  font-style: italic;
+  font-size: .5em;
+}
+
 a {
   @include transition(color .25s $easing);
 
