--- a/source/layouts/_navigation.haml
+++ b/source/layouts/_navigation.haml
@@ -1,10 +1,10 @@
 %nav{role: "navigation"} 
   %ul
     %li
-      = link_to "Work", "#work"
+      = link_to "Work", "/index.html#work"
     %li
-      = link_to "About", "#about"
+      = link_to "About", "/index.html#about"
     %li
       = link_to "Blog", "http://blog.mariusz.cc", target: "_blank"
     %li
-      = link_to "Contact", "#contact"
+      = link_to "Contact", "/index.html#contact"
