--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -22,7 +22,7 @@
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     = javascript_include_tag "site"
   
-  %body
+  %body{class: page_classes}
     = yield
 
     = partial "layouts/footer"
