--- a/source/pages/contact/_email.haml
+++ b/source/pages/contact/_email.haml
@@ -6,4 +6,7 @@
   %p Got an interesting project and would like to work on it with me?
 
   %p
-    = link_to "Let's chat", "mailto:work@mariusz.cc", class: "button"
+    = link_to "Let's chat", "//docs.google.com/forms/d/1qRcglZFPCqWJ7uj0sjUkkPVZhCxidT5k9_cUONujRpE/viewform", class: "button"
+
+  %p
+    %small Sorry for the placeholder form, this site is a constant work in progress. ;)
