Minor copy change

--- a/source/pages/contact/_email.haml
+++ b/source/pages/contact/_email.haml
@@ -1,12 +1,12 @@
 %a#contact
 .contact
   %header
-    %h2 Get in touch
+    %h2 Let's work together
 
   %p Got an interesting project and would like to work on it with me?
 
   %p
-    = link_to "Let's chat", "//docs.google.com/forms/d/1qRcglZFPCqWJ7uj0sjUkkPVZhCxidT5k9_cUONujRpE/viewform", class: "button"
+    = link_to "Get in touch", "//docs.google.com/forms/d/1qRcglZFPCqWJ7uj0sjUkkPVZhCxidT5k9_cUONujRpE/viewform", class: "button"
 
   %p
     %small Sorry for the placeholder form, this site is a constant work in progress. ;)
