--- a/source/stylesheets/components/_teaser.scss
+++ b/source/stylesheets/components/_teaser.scss
@@ -19,12 +19,11 @@
   }
 
   .page h1, .actions {
-    @include animation(reset 0, fade-in 1s ease-in);
+    @extend .animated;
+    @extend .fadeInUp;
   }
 
   h1 {
-    @include animation-delay(0, 0);
-
     font-weight: 500;
     letter-spacing: 0;
     line-height: 1.125;
@@ -48,8 +47,6 @@
   }
 
   .actions {
-    @include animation-delay(0, 0);
-
     margin-top: 3em;
     text-align: center;
   }
