--- a/source/stylesheets/global/_general.scss
+++ b/source/stylesheets/global/_general.scss
@@ -19,12 +19,13 @@ a {
 
 .section-header {
   text-align: center;
-  padding: 50px 0;
+  padding: 100px 0 50px;
 
   h2 {
     font-size: 1.25em;
     letter-spacing: .1em;
     text-transform: uppercase;
     color: lighten($text-color, 20%);
+    margin: 0;
   }
 }
