--- a/source/layouts/_footer.haml
+++ b/source/layouts/_footer.haml
@@ -20,3 +20,9 @@
   %p
     &copy; 2013 Mariusz Ciesla.
     = link_to "See the source.", "https://github.com/mariusz/mariusz.cc"
+
+  %p
+    %a{href: "https://twitter.com/share", class: "twitter-share-button", data: { via: "dotmariusz" }} Tweet
+
+    :javascript
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
