Fix font sizes in teaser, improve title

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -12,7 +12,7 @@
     %meta{name: "description", content: "Freelance Web and Mobile Interactive Designer based in Kraków, Poland / Berlin, Germany."}
     %meta{name: "keywords", content: "freelance, web design, ui design, ux design, designer, interactive design, mobile design, iOS design, user interface, user experience, krakow, berlin"}
 
-    %title= (current_page.data.title || "Web and Mobile Designer") + "&mdash; Mariusz Cieśla"
+    %title= (current_page.data.title || "Web &amp; Mobile User Interface Designer") + " &mdash; Mariusz Cieśla"
 
     = partial "layouts/typekit"
     = partial "layouts/mixpanel"
