--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -4,7 +4,7 @@ $line-height: 1.5;
 $header-line-height: 1.25;
 
 body {
-  font-family: "europa", sans-serif;
+  font-family: "faricy-new-web", sans-serif;
   font-size: 100%;
   font-weight: 500;
   line-height: $line-height;
