Avoid changing behavior based on parent

--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -11,4 +11,4 @@
       web and mobile products
 
     .actions
-      = link_to "See my work", "#work", class: "button"
+      = link_to "See my work", "#work", class: "button teaser-button"
