--- a/source/stylesheets/global/_buttons.scss
+++ b/source/stylesheets/global/_buttons.scss
@@ -20,7 +20,7 @@ button {
   -webkit-font-smoothing: antialiased; 
 
   &:hover {
-    @include box-shadow(0 5px 0 $button-color);
+    @include box-shadow(0 5px 0 darken($button-color, 15%));
     background: lighten($button-color, 5%);
     color: $off-white;
   }
