Playing around with Google Content Experiments.

--- a/source/pages/index/_teaser-v2.haml
+++ b/source/pages/index/_teaser-v2.haml
@@ -3,12 +3,9 @@
 
   .page
     %h1
-      Hello, my name is Mariusz and I
       %span.design-and-build 
-        design
-        %span.amp &amp;
-        build
-      web and mobile interfaces.
+        Design matters.
+      My name is Mariusz and I design web and mobile interfaces that look and work great.
 
     .actions
       = link_to "See my work", "#work", class: "button teaser-button"
