Google Content Experiments once again!

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -16,6 +16,7 @@
 
     = partial "layouts/typekit"
     = partial "layouts/mixpanel"
+    = partial "layouts/content_experiments"
 
     = stylesheet_link_tag "vendor/normalize", "site"
 
