Kraków -> Berlin, wow this website was old

--- a/source/pages/about/_short.haml
+++ b/source/pages/about/_short.haml
@@ -2,7 +2,7 @@
   .content
     .description
       :markdown
-        I'm a self-taught user interface designer based in Kraków, firmly believing that
+        I'm a self-taught user interface designer based in Berlin, firmly believing that
         design is a process, not something that you put on top of a ready-made app. That's
         why I've been dipping my toes into development world to be able to understand and
         help your developers deliver product that your clients will love.
