--- a/source/pages/index/_teaser.haml
+++ b/source/pages/index/_teaser.haml
@@ -12,3 +12,4 @@
 
     .actions
       = link_to "See my work", "#work", class: "button teaser-button"
+      = link_to "Hire me", "#contact", class: "button teaser-button teaser-button--last"
