--- a/source/stylesheets/global/_buttons.scss
+++ b/source/stylesheets/global/_buttons.scss
@@ -16,6 +16,7 @@ button {
   word-wrap: nowrap;
   text-transform: uppercase;
   letter-spacing: .05em;
+  border: 0;
 
   -webkit-font-smoothing: antialiased; 
 
