--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -11,7 +11,7 @@ title: Let's create something awesome together
 
       %p 
         Fill in the form below to get in touch.
-        I usually respond in a couple of hours to couple of days.
+        I usually respond in a couple of days.
 
     .contact-form-wrapper
       = partial "pages/contact/form"
