--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -16,7 +16,7 @@
   }
 
   .content {
-    @include container;
+    @include container(80%);
   }
 
   header {
@@ -37,10 +37,10 @@
   }
   
   .description {
-    @include span-columns(12);
+    @include span(12);
 
     @media only screen and (min-width: 800px) {
-      @include span-columns(6);
+      @include span(6 of 12);
     }
   }
 }
