--- a/source/stylesheets/components/_email.scss
+++ b/source/stylesheets/components/_email.scss
@@ -6,18 +6,14 @@
   }
 
   p {
-    @include span-columns(10);
-    @include pad(1,1);
+    @include span(10 of 12);
+    @include pad(1 of 12);
 
     text-align: center;
     margin-bottom: 2em;
 
     @media only screen and (min-width: 600px) {
-      font-size: ms(1);
+      font-size: ms(0);
     }
-  }
-
-  .button {
-    font-size: ms(1);
   }
 }
