Update bower.json, update all the things

--- a/source/layouts/_navigation.haml
+++ b/source/layouts/_navigation.haml
@@ -5,6 +5,6 @@
     %li
       = link_to "About", "/index.html#about"
     %li
-      = link_to "Blog", "http://blog.mariusz.cc", target: "_blank"
+      = link_to "Writing", "http://medium.com/@dotmariusz", target: "_blank"
     %li
       = link_to "Contact", "/index.html#contact"
