--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -17,6 +17,10 @@
 
   .content {
     @include container(80%);
+  
+    @media only screen and (min-width: 60em) {
+      @include container(59em);
+    }
   }
 
   header {
