Add return button to thanks page

--- a/source/thanks.html.haml
+++ b/source/thanks.html.haml
@@ -12,3 +12,6 @@ title: Let's create something awesome together
       %p 
         Thanks for getting in touch! I try to respond as soon as possible,
         so expect response in a couple of days.
+
+      %p
+        = link_to "Back to main page", "/", class: "button"
