Slight button update

--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -2,5 +2,6 @@ $brand-blue: #F89820;
 $off-white: #f2f2f2;
 $button-color: #F89820;
 $teaser-bg: $button-color;
+$white: #fff;
 
 $text-color: #364054;
