Make buttons great again

--- a/source/stylesheets/global/_buttons.scss
+++ b/source/stylesheets/global/_buttons.scss
@@ -8,7 +8,7 @@ button {
 
   border-radius: .125em;
   background: $button-color;
-  color: $off-white;
+  color: $white;
   padding: .5em 1em;
   font-weight: bold;
   text-decoration: none;
