--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,6 +3,9 @@
 %a#work
 = partial "pages/work/dribbble"
 
+%a#testimonials
+= partial "pages/work/testimonials"
+
 %a#about
 = partial "pages/about/short"
 
