Add Mixpanel tracking for submit form

--- a/source/pages/contact/_form.haml
+++ b/source/pages/contact/_form.haml
@@ -21,4 +21,4 @@
       %span.hint e.g. We recently got funded, we need a designer to help us redesign our MVP into a real product.
     %textarea{rows: "8", cols: "80"}
   %p.actions
-    %button Let's do it!
+    %button#btn_contact_submit Let's do it!
