--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -9,10 +9,10 @@
   %head
     %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
     %meta{charset: "utf-8"}
-    %meta{name: "description", content: "Freelance Web and Mobile Interactive Designer based in Kraków, Poland / Berlin, Germany."}
-    %meta{name: "keywords", content: "freelance, web design, ui design, ux design, designer, interactive design, mobile design, iOS design, user interface, user experience, krakow, berlin"}
+    %meta{name: "description", content: "Web and Mobile User Interface and User Experience Design Consultant based in Berlin, Germany."}
+    %meta{name: "keywords", content: "freelance, web design, ui design, ux design, designer, interactive design, mobile design, iOS design, user interface, user experience, consultant berlin"}
 
-    %title= (current_page.data.title || "Web &amp; Mobile User Interface Designer") + " &mdash; Mariusz Cieśla"
+    %title= (current_page.data.title || "Web &amp; Mobile User Experience & User Interface Designer") + " &mdash; Mariusz Cieśla"
 
     = partial "layouts/typekit"
     = partial "layouts/analytics"
